Update text to clarify desert land description

--- a/Fleur-dOranger/index.html
+++ b/Fleur-dOranger/index.html
@@ -219,7 +219,7 @@ forma de referirse a Egipto,
 su nombre original,
 el 'Lugar de Tierra Negra' “fértil”
 por el légamo del Nilo,
-en contraste con la tierra roja del desierto.
+en contraste con la tierra roja estéril del desierto.
 
 Del Arábico ‘Al-Kīmiyā'
 en que ‘al’ es el prefijo determinante ‘la’ o ‘el’
@@ -272,7 +272,7 @@ forma de referirse a Egipto,
 su nombre original,
 el 'Lugar de Tierra Negra' “fértil”
 por el légamo del Nilo,
-en contraste con la tierra roja del desierto.
+en contraste con la tierra roja estéril del desierto.
 
 Del Arábico ‘Al-Kīmiyā'
 en que ‘al’ es el prefijo determinante ‘la’ o ‘el’
