Modify hero section layout for desktop
Comment out desktop layout for hero section to maintain stacked layout.

--- a/Fleur-dOranger/index.html
+++ b/Fleur-dOranger/index.html
@@ -48,7 +48,10 @@
       align-items: stretch;
     }
     @media (min-width: 900px) {
-      .hero { grid-template-columns: 1.2fr 1fr; } /* Desktop layout */
+      /*.hero { grid-template-columns: 1.2fr 1fr; } /* Desktop layout */
+      .hero { grid-template-columns: 1fr; } /* FULL WIDTH: keep stacked layout on desktop too */
+}
+
     }
 
     .left {
