--- a/Fleur-dOranger/index.html
+++ b/Fleur-dOranger/index.html
@@ -152,7 +152,7 @@
     .video-wrap {
       position: relative;
       width: 100%;
-      padding-top: 70%; /* Aspect ratio 16:9 (change if needed) */
+      padding-top: 70%; /* Aspect ratio 16:9 (change if needed) Taller video window (more presence) */
       background: #0a0e16;
     }
 
