Fix media query styles for hero section layout

--- a/Fleur-dOranger/index.html
+++ b/Fleur-dOranger/index.html
@@ -48,8 +48,8 @@
       align-items: stretch;
     }
     @media (min-width: 900px) {
-      /*.hero { grid-template-columns: 1.2fr 1fr; } /* Desktop layout */
-      .hero { grid-template-columns: 1fr; } /* FULL WIDTH: keep stacked layout on desktop too */
+      .hero { grid-template-columns: 1.2fr 1fr; } /* Desktop layout */
+      /*.hero { grid-template-columns: 1fr; } /* FULL WIDTH: keep stacked layout on desktop too */
 }
 
     }
@@ -186,6 +186,7 @@
       box-shadow: 0 10px 26px rgba(255, 172, 28, .10);
     }
     .cta small { opacity: .9; font-weight: 600; }
+
 
     @media (max-width: 360px) {
       .ticker { height: 240px; }
